# libsyscall

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  example.cpp  make.sh  make_asan.sh
include/libsyscall/: libsyscall.h
wl_fd_allocator/: CMakeLists.txt  wl_fd_allocator.cpp
wl_fd_allocator/include/libsyscall/: wl_fd_allocator.h
